Configured .icon-div to be 100vw instead of a set width and also added overscroll-x hidden in app.scss to prevent horizontal scrolling

--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -30,6 +30,7 @@ html {
   background-size: cover;
   background-position: center;
   background-attachment: fixed;
+  overflow-x: hidden;
 }
 
 #stars {
