--- a/src/styles/contact.scss
+++ b/src/styles/contact.scss
@@ -91,5 +91,8 @@
         margin: 5px 0;
       }
     }
+    .icon-div {
+      width: 100vw;
+    }
   }
 }
